k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mhb-api
  namespace: mhb
spec:
  selector:
    app: mhb-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
